@@ -60,6 +60,7 @@
 - don't block signals we expect to dump core.
 - fix pthread push order in expire_proc_direct().
 - fix libxml2 non-thread-safe calls.
+- fix direct map cache locking.
 
 4/11/2008 autofs-5.0.4
 -----------------------
